@@ -454,6 +454,9 @@ Release 2.0.3-alpha - Unreleased
     HDFS-4445. All BKJM ledgers are not checked while tailing, So failover will fail.
     (Vinay via umamahesh)
 
+    HDFS-4462. 2NN will fail to checkpoint after an HDFS upgrade from a
+    pre-federation version of HDFS. (atm)
+
   BREAKDOWN OF HDFS-3077 SUBTASKS
 
     HDFS-3077. Quorum-based protocol for reading and writing edit logs.
